--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wdth,wght@12..96,75..100,200..800&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
 
 :has(*),
 button,
@@ -10,4 +10,19 @@ textarea {
 
 * {
 	box-sizing: border-box;
+}
+
+.decimal-percent {
+	margin-left: -0.25rem;
+	font-size: 60%;
+	font-weight: 600;
+	font-variant-numeric: normal !important;
+	font-variation-settings:
+		'wdth' 75,
+		'opsz' 96;
+}
+
+number-flow-svelte {
+	font-variant-numeric: tabular-nums;
+	font-family: 'Bricolage Grotesque', sans-serif !important;
 }
