add: ParliamentChart with radio buttons.

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -47,3 +47,30 @@ number-flow-svelte::part(suffix) {
 
 	opacity: 0.5;
 }
+
+[data-radio-group-root] {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+
+	[data-radio-group-item] {
+		border: none;
+		padding: 0.25rem 0.5rem;
+
+		&[data-state='checked'] {
+			background-color: #ccc;
+		}
+	}
+
+	& > * {
+		&:first-of-type > [data-radio-group-item] {
+			border-radius: 0.25rem 0 0 0.25rem;
+		}
+
+		&:last-of-type > [data-radio-group-item] {
+			border-radius: 0 0.25rem 0.25rem 0;
+		}
+	}
+}
