add: Tippy paragraph tooltips + merge 9711b6c

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -74,3 +74,8 @@ number-flow-svelte::part(suffix) {
 		}
 	}
 }
+
+.paragraph-tippy-target {
+	text-decoration: underline;
+	text-decoration-style: dashed;
+}
